# stt

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  changelog.md  demo_advanced_pipeline.py  development_phases.md  docker-compose.yml  explanation.md  memory.md  plan.md  pyproject.toml
.claude/: architect.md  code_reviewer.md  developer.md  integration_tester.md  planner.md  security_reviewer.md  unit_tester.md
configs/: clinical_patterns.yaml
docs/: requirements_assessment.md  user_guide.md  workflow_explainer.md
scripts/: compare_quality_methods.py  dev.sh  download_terminology.py  generate_test_conversations.py  load_lexicon.py  run_test_evaluation.py  startup.py
src/hsttb/: __init__.py  cli.py
src/hsttb/adapters/: __init__.py  base.py  deepgram_adapter.py  elevenlabs_tts.py  gemini_adapter.py  mock_adapter.py  registry.py  whisper_adapter.py
src/hsttb/audio/: __init__.py  chunker.py  loader.py
src/hsttb/core/: __init__.py  config.py  exceptions.py  types.py
src/hsttb/evaluation/: __init__.py  runner.py
src/hsttb/lexicons/: __init__.py  api_fetcher.py  base.py  biomedical_lexicon.py  dynamic_lexicon.py  medcat_lexicon.py  mock_lexicon.py  scispacy_lexicon.py  sqlite_lexicon.py  unified.py
src/hsttb/metrics/: __init__.py  clinical_contradiction.py  clinical_risk.py  confidence_variance.py  contradiction.py  crs.py  dosage_plausibility.py  embedding_drift.py  entity_assertion.py  entity_continuity.py  grammar.py  medical_coherence.py  medical_terms.py  multi_backend.py  multi_nlp.py  ner.py  perplexity.py  quality.py  semantic_similarity.py  speech_rate.py  srs.py  ter.py  term_matcher.py
src/hsttb/nlp/: __init__.py  biomedical_ner.py  entity_alignment.py  gap_filler.py  medspacy_ner.py  negation.py  ner_pipeline.py  normalizer.py  registry.py  scispacy_ner.py  semantic_similarity.py
src/hsttb/reporting/: __init__.py  generator.py
src/hsttb/webapp/: __init__.py  app.py  audio_handler.py  evaluation_history.py  stellicare_client.py  stellicare_handler.py  tts_history.py  websocket_handler.py
src/hsttb/webapp/static/: app.js  style.css
src/hsttb/webapp/templates/: index.html
tasks/: README.md
tasks/phase_1/: README.md  TASK-1A02.md  TASK-1C01.md  TASK-1C02.md  TASK-1S01.md
tasks/phase_2/: README.md
tasks/phase_3/: README.md
tasks/phase_4/: README.md
tasks/phase_5/: README.md
tasks/phase_6/: README.md
tasks/phase_7/: README.md
test_data/conversations/: README.md  index.json
test_data/conversations/01_perfect_transcriptions/perfect_001/: metadata.json  transcribed.txt
test_data/conversations/01_perfect_transcriptions/perfect_002/: ground_truth.txt  metadata.json
test_data/conversations/01_perfect_transcriptions/perfect_003/: ground_truth.txt  metadata.json
test_data/conversations/01_perfect_transcriptions/perfect_004/: ground_truth.txt  metadata.json
test_data/conversations/01_perfect_transcriptions/perfect_005/: metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_001/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_002/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_003/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_004/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_005/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_006/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_007/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/02_drug_name_errors/drug_008/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_001/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_002/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_003/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_004/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_005/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/03_dosage_errors/dosage_006/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/04_negation_flips/negation_001/: ground_truth.txt  metadata.json  transcribed.txt
test_data/conversations/04_negation_flips/negation_002/: ground_truth.txt  (+2 more)
tests/: __init__.py  conftest.py  test_adapters.py  test_audio.py  test_audio_handler.py  test_crs.py  test_evaluation.py  test_lexicons.py  test_multi_nlp.py  test_ner.py  test_new_adapters.py  test_nlp_registry.py  test_reporting.py  test_ter.py  test_websocket_handler.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/core/: test_types.py
(+127 files in other folders)
