[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsttb"
version = "0.1.0"
description = "Healthcare Streaming STT Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HSTTB Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "soundfile>=0.12.0",
    "pyyaml>=6.0.0",
    "orjson>=3.9.0",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# NLP dependencies for medical term extraction
nlp = [
    "spacy>=3.7.0",
    "scispacy>=0.5.0",
    "medspacy>=1.0.0",
    "rapidfuzz>=3.5.0",
]
# MedCAT for UMLS/SNOMED linking
medcat = [
    "medcat>=1.12.0",
]
# scispaCy models (install separately)
# pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz
scispacy-models = [
    "scispacy>=0.5.0",
]
# Embeddings for CRS
embeddings = [
    "sentence-transformers>=2.2.0",
]
# STT adapters
whisper = [
    "openai-whisper>=20230918",
]
# Cloud STT adapters
cloud-adapters = [
    "google-cloud-speech>=2.21.0",
    "deepgram-sdk>=3.0.0",
]
# TTS for test audio generation
tts = [
    "elevenlabs>=1.0.0",
]
# Metrics and evaluation
metrics = [
    "jiwer>=3.0.0",
    "seqeval>=1.2.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.2.0",
]
# API and reporting
api = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]
# Experiment tracking
tracking = [
    "mlflow>=2.10.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=23.0.0",
]
# All dependencies
all = [
    "hsttb[nlp,embeddings,whisper,cloud-adapters,tts,metrics,api,tracking,dev]",
]

[project.scripts]
hsttb = "hsttb.cli:main"

[project.urls]
Homepage = "https://github.com/example/hsttb"
Documentation = "https://github.com/example/hsttb#readme"
Repository = "https://github.com/example/hsttb"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hsttb = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["hsttb"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
files = ["src/hsttb"]

[[tool.mypy.overrides]]
module = [
    "soundfile.*",
    "scipy.*",
    "sklearn.*",
    "spacy.*",
    "scispacy.*",
    "medspacy.*",
    "whisper.*",
    "sentence_transformers.*",
    "mlflow.*",
    "plotly.*",
    "networkx.*",
    "click.*",
    "google.cloud.*",
    "deepgram.*",
    "elevenlabs.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hsttb.cli"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "live: Tests requiring live services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/hsttb"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 90
show_missing = true
